--- a/index.html
+++ b/index.html
@@ -1,35 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
 <head>
-<meta charset="utf-8">
-<script
-src="https://use.fontawesome.com/d1341f9b7a.js"></script>
-<link rel="stylesheet" href="style.css">
-<title>Personal WebSite</title>
-<link
-href="https://fonts.googleapis.com/css2?family=Montserrat:wght
-@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Футбольний менеджер. Офіційний сайт. Футбол Хмельницький</title>
+<!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
-<div class="box">
-
-<h1>Harry Coder</h1>
-<img src="https://play-lh.googleusercontent.com/x31qsmJO9uS8aWLLUsTCVkGtxs9Kw71PyPars0-XghB5i7JfUsg3cIiBLQzk6EX-OMo=w240-h480-rw" alt="" class="box-img">
-<h5>Web Devloper - Web Designer</h5>
-<p>
-    Sarah Lee's journey into the realm of technology is a testament to the transformative power of passion, perseverance, and a relentless pursuit of excellence. Born and raised in the vibrant cityscape of San Francisco, Sarah's fascination with computers ignited at an early age.
-
-    Growing up in the digital era, Sarah found herself captivated by the endless possibilities that technology offered. What began as a hobby tinkering with basic programming languages soon blossomed into a full-fledged passion for software development. Fuelled by an insatiable curiosity and an innate knack for problem-solving, Sarah embarked on a journey to master the art of coding.
-</p>
+<div class="wrapper">
+<header>
+<div class="header">
+<div class="logo">
+<p>Футбольний <b>Менеджер</b><i>Офіційний сайт</i></p>
+<picture>
+<img src="https://onlyballs.com.ua/image/cache/catalog/Rozetka/ukr-800x800.jpg" alt="логотип футбольного менеджера у формі
+футбольного м'яча" width="500" height="500">
+</picture>
+</div>
+<div class="contacts">
+<p><a href="tel:+380975555501">+38 (097) 555-55-01</a><i>Працюємо
+24/7</i></p>
+</div>
+</div>
+</header>
+<main>
+<picture class="main-picture">
+<img src="https://kartinki.pics/uploads/posts/2022-03/thumbs/1647023971_1-kartinkin-net-p-kartinki-futbolnogo-polya-1.jpg" alt="Про футбол ворота футбольний
+менеджер" width="500" height="300"> 
+</picture>
+<div class="main">
+<section class="main-text">
+<h1>Про футбол</h1>
+<p>Командний вид спорту, який грається між двома командами по
+одинадцяти гравців зі сферичним м'ячем. Близько 250 мільйонів чоловіків і
+жінок із більш ніж 200 країн грають у футбол, що робить його
+найпопулярнішим в світі видом спорту.</p>
+<p>У футбол грають на прямокутному полі з воротами на кожному
+кінці. Мета гри полягає в тому, щоб забити м'яч в ворота протилежної команди.
+Гравцям не дозволяється торкатися м'яча своїми руками, поки він знаходиться в
+грі, якщо вони не є воротарі (і тільки тоді, коли в їхньому штрафному
+майданчику).</p>
+<p>Або при вкиданні м'яча. Інші гравці в основному використовують
+свої ноги, щоб нанести удар або передати м'яч, але можуть також
+використовувати голову і тулуб.</p>
+<p>Згідно зі спогадами Степана Шаха, професор Іван Боберський 1908 року організував серед учнів Академічної Гімназії Львова «Спортовий Кружок гри ніжної пилки», який самі гімназисти називали «футбалевий клюб».
+До радянської анексії на заході Україні також використовували назву ко́паний м'яч, або копанка.</p>
+</section>
+<aside class="menu">
+<p>Футбольні партнери</p>
+<nav>
 <ul>
-<li><a href="#"><i class="fa fa-facebook-square" aria-
-hidden="true"></i></a></li>
-<li><a href="#"><i class="fa fa-twitter-square" aria-
-hidden="true"></i></a></li>
-<li><a href="#"><i class="fa fa-google-plus-square"
-aria-hidden="true"></i></a></li>
+<li>
+<a href="#">ОСТАННІ НОВИНИ</a>
+</li>
+<li>
+<a href="#">ПАРІ МАТЧ</a>
+</li>
+<li>
+<a href="#">ПРИВАТНИЙ МЕНЕДЖЕР ВАСЯ</a>
+</li>
+<li>
+<a href="#">ФАНАТИ СЕКТОРУ №48</a>
+</li>
+<li>
+<a href="#">ДОСТАВКА ЇЖІ НА СТАДІОН</a>
+</li>
 </ul>
+</nav>
+</aside>
+</div>
+</main>
+<footer>
+<p class="footer">© Футбольний менеджер 2023.</p>
+</footer>
 </div>
 </body>
 </html>
